test/e2e/artifacts/environments/dev/kubernetes-kgateway/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: ${NAMESPACE}

resources:
- secret.yaml
- ../../../components/inference-gateway/
- gateway-parameters.yaml

patches:
- path: patch-deployments.yaml
- path: patch-gateways.yaml
