test/e2e/artifacts/environments/dev/kubernetes-kgateway/patch-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${EPP_NAME}
spec:
  template:
    spec:
      containers:
      - name: epp
        image: ${EPP_IMAGE}
        imagePullPolicy: Always
        args:
        - --pool-name
        - ${POOL_NAME}
        - --pool-namespace
        - ${NAMESPACE}
        - --v
        - "4"
        - --zap-encoder
        - "json"
        - --grpc-port
        - "9002"
        - --grpc-health-port
        - "9003"
        - --config-file
        - "/etc/epp/epp-config.yaml"
        env:
          - name: HF_TOKEN
            valueFrom:
              secretKeyRef:
                name: hf-token
                key: ${HF_SECRET_KEY}
