test/e2e/artifacts/environments/dev/kubernetes-kgateway/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: hf-token
  labels:
    app.kubernetes.io/name: vllm
    app.kubernetes.io/component: secret
type: Opaque
stringData:
  token: ${HF_TOKEN}
